--- a/style.css
+++ b/style.css
@@ -51,6 +51,87 @@ audio {
   width: 70%;
   border-radius: 4px;
 }
+.neontext {
+  display: flex;
+  width: 300px;
+  margin: 50px auto;
+  justify-content: center;
+}
+
+/* Neon */
+
+@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
+
+:root {
+  /* Base font size */
+  font-size: 10px;
+
+  /* Set neon color */
+  --neon-border-color: #0087ff;
+}
+
+h1 {
+  font-size: 21px;
+  font-weight: 200;
+  font-style: italic;
+  color: #fff;
+  padding: 0px 36px;
+  border: 0.4rem solid #fff;
+  border-radius: 2rem;
+  text-transform: uppercase;
+  animation: flicker 5s infinite alternate;
+  font-family: "Exo 2", sans-serif;
+  display: flex;
+  justify-content: center;
+  background: #4500c4;
+  width: 450px;
+  height: 96px;
+  align-items: center;
+}
+
+h1::-moz-selection {
+  background-color: var(--neon-border-color);
+  color: var(--neon-text-color);
+}
+
+h1::selection {
+  background-color: var(--neon-border-color);
+  color: var(--neon-text-color);
+}
+
+h1:focus {
+  outline: none;
+}
+
+/* Animate neon flicker */
+@keyframes flicker {
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    text-shadow: -0.2rem -0.2rem 1rem #fff, 0.2rem 0.2rem 1rem #fff,
+      0 0 2rem var(--neon-text-color), 0 0 4rem var(--neon-text-color),
+      0 0 6rem var(--neon-text-color), 0 0 8rem var(--neon-text-color),
+      0 0 10rem var(--neon-text-color);
+
+    box-shadow: 0 0 0.5rem #fff, inset 0 0 0.5rem #fff,
+      0 0 2rem var(--neon-border-color), inset 0 0 2rem var(--neon-border-color),
+      0 0 4rem var(--neon-border-color), inset 0 0 4rem var(--neon-border-color);
+  }
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+    box-shadow: none;
+  }
+}
+/* Neon */
+
 @media (max-width: 500px) {
   header div p {
     font-size: 70%;
@@ -65,6 +146,10 @@ audio {
     background-repeat: no-repeat;
     background-size: cover;
   }
+  .neontext h1 {
+    font-size: 151%;
+    width: 80%;
+  }
 }
 @media (max-width: 500px) {
   .footer p {
@@ -74,5 +159,10 @@ audio {
 @media (max-width: 350px) {
   header div p {
     font-size: 70%;
+  }
+  .neontext h1 {
+    font-size: 136%;
+    width: 65%;
+    height: 80px;
   }
 }
